[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/WeightBar.gd" type="Script" id=1]
[ext_resource path="res://models/blue_transparent.material" type="Material" id=2]
[ext_resource path="res://scenes/WeightDecorator.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/WeightBarArea.gd" type="Script" id=4]
[ext_resource path="res://MultiplayerRoom/RemoteSpatial.gd" type="Script" id=5]
[ext_resource path="res://audio/metal_clank.wav" type="AudioStream" id=6]

[sub_resource type="CylinderShape" id=1]
radius = 0.05
height = 8.0

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.05
bottom_radius = 0.05
height = 8.0

[sub_resource type="SphereMesh" id=3]
radius = 0.02
height = 0.04

[node name="ARVRController" type="ARVRController"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="Spatial" parent="Area" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-09, 0.1, 0, -0.1, -4.37114e-09, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="RemoteSpatial" type="Spatial" parent="."]
script = ExtResource( 5 )
is_local = true
transform_parent = true
node_type = "controller"

[node name="hit_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="RumbleTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="RumbleTimer" to="." method="_on_RumbleTimer_timeout"]
